@@ -32,6 +32,16 @@ class XMLRPCHandlerTests(unittest.TestCase):
         from supervisor.xmlrpc import RootRPCInterface
         self.assertEqual(handler.rpcinterface.__class__, RootRPCInterface)
 
+    def test_match(self):
+        class DummyRequest:
+            def __init__(self, uri):
+                self.uri = uri
+        supervisor = DummySupervisor()
+        subinterfaces = [('supervisor', DummySupervisorRPCNamespace())]
+        handler = self._makeOne(supervisor, subinterfaces)
+        self.assertEqual(handler.match(DummyRequest('/RPC2')), True)
+        self.assertEqual(handler.match(DummyRequest('/nope')), False)
+
     def test_continue_request_nosuchmethod(self):
         supervisor = DummySupervisor()
         subinterfaces = [('supervisor', DummySupervisorRPCNamespace())]
